--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "next": "13.4.12",
     "next-intl": "^3.0.0-beta.9",
     "postcss": "8.4.27",
